<resources>
    <string name="app_name">Kick Start</string>
    <string name="app_name_caps">KICK START</string>
    <string name="club_name">MONASH TAEKWONDO</string>
    <string name="title_activity_news_letter_page">NewsLetterPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Select Person Activity strings -->
    <string name="statement">You are a</string>
    <string name="member">MEMBER</string>
    <string name="committee">COMMITTEE</string>

    <!-- Login Activity -->
    <string name="login">Log in</string>
    <string name="back">Back</string>
    <string name="have_done_before">First Time</string>

    <!-- Newsletter Page -->
    <string name="post_title">Post Title</string>
    <string name="post_image">post_image</string>
    <string name="post_description">Description goes here</string>


</resources>
